# ansar_kvizz

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
data/: bot.db
docs/: ARCHITECTURE.md  SCENARIOS.md  USAGE.md
quizbot/: __main__.py  config.py  db.py  keyboards.py  models.py  utils.py
quizbot/handlers/: callbacks.py  commands.py
quizbot/services/: game_service.py  game_state.py  registration_state.py
tests/: conftest.py  test_config.py  test_db.py  test_game_service.py  test_game_state.py  test_handlers_callbacks.py  test_handlers_commands.py  test_keyboards.py  test_main.py  test_registration_state.py  test_utils.py
