[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "buzzer-bot"
version = "0.1.0"
description = "Telegram quiz bot with buzzer queue"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "quizbot" }]

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.4.1"
sqlalchemy = { version = "^2.0.29", extras = ["asyncio"] }
aiosqlite = "^0.19.0"
pydantic-settings = "^2.2.1"
loguru = "^0.7.2"
uvloop = { version = "^0.19.0", optional = true }

[tool.poetry.extras]
uvloop = ["uvloop"]

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.5"
mypy = "^1.8.0"
pytest = "^8.3.2"
pytest-asyncio = "^0.24.0"
pytest-cov = "^5.0.0"

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E","F","I","UP","B","C4","S","PT","Q","TID","PL","RUF"]
ignore = ["S101"]

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_return_any = true
show_error_codes = true
mypy_path = "quizbot"

[[tool.mypy.overrides]]
module = ["aiogram.*", "loguru.*"]
ignore_missing_imports = true

[tool.poetry.scripts]
quizbot = "quizbot.__main__:main"
